amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#API-endpoint-mandatoryGraphqlNonEmptyEndpoints
  Message: Must have 'schema' node or 'Query', 'Mutation' or 'Subscription' types
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.graphql#/web-api
  Property: http://a.ml/vocabularies/apiContract#endpoint
  Range: 
  Location: 

- Constraint: http://a.ml/vocabularies/amf/core#recursive-shape
  Message: Directive definition 'invalidExample' cannot reference itself indirectly thorough field 'arg'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.graphql#/declares/invalidExample
  Property: 
  Range: [(2,0)-(2,89)]
  Location: 
